tests/NormalTests/paczka1/fuzzy1/91698460.err
Error in line 9: IJhRm0 A671 37,1
Error in line 17: 2lzLi5u S345 3,3
Error in line 23: 2lzLi5u A671 12,88
Error in line 18: 4WoNAvIXy A341 84,1
Error in line 27: 4WoNAvIXy S345 11,4
Error in line 8: XiWtuQ89r A671 380,3
Error in line 32: IJhRm0 A341 68,7
